# ysc

./: .gitignore  CNAME  Cargo.toml  README.md  guide.html  index.html  playground.html  stdlib.html
.github/workflows/: docs.yml
benchmarks/: run.py
crates/ys-cli/src/: error_display.rs
crates/ys-core/src/: ast.rs  ast_parser.rs  codegen.rs  compiler.rs  fmt.rs  lexer.rs  optimizer.rs  token_stream.rs
crates/ys-core/src/ast_parser/: expr.rs  stmt.rs
crates/ys-core/src/codegen/: expr.rs  func.rs  stmt.rs
crates/ys-runtime/: Cargo.toml
crates/ys-runtime/src/: context.rs  yatsu.rs
crates/ys-runtime/src/natives/: io.rs  list_ops.rs  mod.rs  net.rs  object_ops.rs  time.rs
crates/ys-runtime/src/vm/: collections.rs  dispatch.rs  frame.rs  methods.rs  mod.rs  setup.rs
crates/ys-wasm/src/: lib.rs
css/: style.css
docs/: language_guide.md  playground.html  stdlib.md
docs/superpowers/plans/: 2026-07-11-yatsuscript-redesign.md
docs/superpowers/specs/: 2026-07-11-async-switch-design.md
examples/: 1million_loop.ys  all_features.ys  bench_mimalloc.ys  cache_fib.ys  capture_test.ys  fib.ys  kwargs_test.ys  loop.ys  main.ys  objects.ys  perf_test.ys  prime.ys  rest_test.ys  test.ys  test_closure.ys  test_concat.ys  test_concurrency.ys  test_fn.ys  test_fn_ref.ys  test_not.ys  test_not_comprehensive.ys  test_not_error.ys  test_server.ys  test_shared_global.ys  test_str.ys
examples/advanced/: async_fetch.ys  async_parallel.ys  async_simple.ys  async_sleep_parallel.ys  chaining.ys  map_filter_reduce.ys  recursion.ys
examples/basics/: closures.ys  collections.ys  control_flow.ys  functions.ys  hello.ys  modules.ys  ranges.ys  variables.ys
examples/server/: server.ys
examples/stdlib/: io.ys  time.ys
examples/tests/: test_numbers.ys  test_objects.ys  test_strings.ys
pkg/: README.md  package.json  ys_wasm.d.ts  ys_wasm.js  ys_wasm_bg.wasm  ys_wasm_bg.wasm.d.ts
ys-cli/: Cargo.toml  README.md
ys-cli/src/: error_display.rs  fmt.rs  main.rs  run.rs
ys-core/src/: ast.rs  ast_parser.rs  codegen.rs  compiler.rs  fmt.rs  lexer.rs  lib.rs  optimizer.rs  parser.rs  token_stream.rs
ys-lsp/: Cargo.toml
ys-lsp/src/: analysis.rs
ys-runtime/: Cargo.toml
ys-runtime/src/: context.rs  heap.rs  value_ext.rs  value_fmt.rs  yatsu.rs
ys-runtime/src/natives/: collections.rs  io.rs  list_ops.rs  mod.rs  net.rs  number_ops.rs  object_ops.rs  string_ops.rs  time.rs
ys-runtime/src/vm/: mod.rs  mod.rs.bak  setup.rs
ys-wasm/: Cargo.toml  README.md  build.sh  ys_wasm.d.ts
ys-wasm/src/: lib.rs
ys-wasm/test/: index.html  playground.html
