[package]
name    = "ys-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol implementation for the YatsuScript scripting language"
license = "MIT"

[[bin]]
name = "ys-lsp"
path = "src/main.rs"

[dependencies]
ys-core      = { path = "../ys-core" }
tower-lsp    = "0.20"
tokio        = { version = "1", features = ["full"] }
logos        = "0.16.1"
dashmap      = "6"
