[package]
name        = "ys-runtime"
version     = "0.1.0"
edition     = "2024"
description = "YatsuScript execution engine: register VM, generational GC, heap, and native functions."
license     = "MIT"

[dependencies]
ys-core     = { path = "../ys-core" }
logos       = "0.16.1"
rustc-hash  = "2.1.1"
thiserror   = "2.0.18"
ureq        = "3"
parking_lot = "0.12.5"
rayon       = "1.11.0"
