[package]
name        = "ys-runtime"
version     = "0.1.0"
edition     = "2024"
description = "YatsuScript execution engine: register VM, generational GC, heap, and native functions."
license     = "MIT"

[dependencies]
ys-core     = { path = "../ys-core" }
rustc-hash  = "2.1.1"
ureq        = "3"
rayon       = "1.11.0"
