[package]
name        = "ys-runtime"
version     = "0.1.0"
edition     = "2024"
description = "YatsuScript execution engine: register VM, generational GC, heap, and native functions."
license     = "MIT"

[features]
default = ["networking", "parallel"]
networking = ["dep:ureq"]
parallel   = ["dep:rayon"]

## WASM-friendly build (no net/thread deps).  Use either:
##   cargo build -p ys-runtime --target wasm32-unknown-unknown --no-default-features
##   cargo build -p ys-runtime --target wasm32-unknown-unknown --features wasm
wasm = []

[dependencies]
ys-core     = { path = "../ys-core" }
rustc-hash  = "2.1.1"
ureq        = { version = "3", optional = true }
rayon       = { version = "1.11.0", optional = true }
